// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address component should renders correctly 1`] = `
<Styled(BodyCopy)
  className="sample-class"
  color="text.primary"
  component="div"
  dataLocator="address-details"
  fontFamily="primary"
  fontSize="fs14"
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="addressTile__name address text-break"
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    test test
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="addressLine"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      addressline 1
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      addressline 2
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break"
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      test city, test state 111-111
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      test country
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break"
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      1234567890
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;

exports[`Address component should renders correctly when different addressLine are coming 1`] = `
<Styled(BodyCopy)
  className="sample-class"
  color="text.primary"
  component="div"
  dataLocator="address-details"
  fontFamily="primary"
  fontSize="fs14"
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="addressTile__name address text-break"
    color="text.primary"
    component="p"
    data-locator="test-fullname"
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    test test
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="addressLine"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator="test-addressline1"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tag="p"
      textAlign="left"
    >
      test addressline 1
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator="test-addressline2"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      tag="p"
      textAlign="left"
    >
      test addressline 2
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break"
      color="text.primary"
      component="p"
      data-locator="test-cityfullname"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      test city, test state 111-111
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;

exports[`Address component should renders correctly when optional fields are not present 1`] = `
<Styled(BodyCopy)
  className="test-class"
  color="text.primary"
  component="div"
  dataLocator="address-details"
  fontFamily="primary"
  fontSize="fs14"
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  textAlign="left"
>
  <Styled(BodyCopy)
    className="addressTile__name address text-break"
    color="text.primary"
    component="p"
    data-locator=""
    fontFamily="secondary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    test test
  </Styled(BodyCopy)>
  <Styled(BodyCopy)
    className="addressLine"
    color="text.primary"
    component="div"
    fontFamily="primary"
    fontSize={12}
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="left"
  >
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      addressline 1
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break "
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      addressline 2
    </Styled(BodyCopy)>
    <Styled(BodyCopy)
      className="address text-break"
      color="text.primary"
      component="p"
      data-locator=""
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      test city, test state 111-111
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</Styled(BodyCopy)>
`;
